# kidstunes

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  MYPY_FIX_TODO.md  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
kidstunes/: bot.py  config.py  database.py  downloader.py  main.py  models.py
tests/: test_downloader.py
